# containix

./: .gitignore  Cargo.toml  LICENSE  README.md  build-rust-package.nix  containix-base.nix  default.nix  dprint.json  flake.nix  lib.nix
example/simple_container/: flake.nix
examples/: iter.rs  serde.rs  tracing.rs  uid.rs  unshare-timing.rs
examples/simple_container/: flake.nix
examples/webserver/: flake.nix
src/: command.rs  command_wrappers.rs  container.rs  env.rs  host_tools.rs  init.rs  lib.rs  linux_net.rs  main.rs  mount.rs  network_config.rs  nix.rs  nix_helpers.rs  overlayfs.rs  path_ext.rs  ports.rs  tempdir.rs  tools.rs  unix_helpers.rs  unshare.rs  volume_mount.rs
src/cli_wrappers/: mod.rs  nix.rs  slirp.rs
templates/basic/: flake.nix
