[package]
name = "containix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
enum-as-inner = "0.6.0"
futures-util = "0.3.30"
nix = { version = "0.29.0", features = ["fs", "mount", "process", "sched"] }
rtnetlink = { version = "0.14.1" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
