[package]
name = "containix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
derive_builder = "0.20.1"
derive_more = { version = "1.0.0", features = ["full"] }
enum-as-inner = "0.6.0"
nix = { version = "0.29.0", features = ["user", "sched", "mount", "fs", "process", "signal"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tempdir = "0.3.7"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-builder = "0.20.0"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
